roles/app/files/api/overlays/dev/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-server-vs
spec:
  gateways:
    - istio-ingress/istio-gw
  hosts:
    - "api-dev.apocrypha.in"
  http:
    - match:
        - port: 80
          uri:
            prefix: "/"
      redirect:
        scheme: https
        port: 443
    - match:
        - port: 443
          uri:
            prefix: "/"
      route:
        - destination:
            host: api-server
            port:
              number: 80
